tests/baselines/reference/importClause_namedImports.errors.txt
/d.ts(1,21): error TS1361: Type-only import must reference a type, but 'C' is a value.
/d.ts(2,5): error TS2693: 'A' only refers to a type, but is being used as a value here.


==== /abc.ts (0 errors) ====
    export class A {}
    export type B  = { b: string };
    export const C = "";
    
==== /d.ts (2 errors) ====
    import type { A, B, C } from './abc';
                        ~
!!! error TS1361: Type-only import must reference a type, but 'C' is a value.
!!! related TS2728 /abc.ts:3:14: 'C' is declared here.
    new A();
        ~
!!! error TS2693: 'A' only refers to a type, but is being used as a value here.
    declare let a: A;
    declare let b: B;
    b.b;
    